Fix: black and tests

--- a/src/jupyter_examples/NumCharteristics.ipynb
+++ b/src/jupyter_examples/NumCharteristics.ipynb
@@ -32,6 +32,7 @@
     "import numpy as np\n",
     "from src.mixtures.nm_mixture import *\n",
     "from scipy.stats import expon\n",
+    "\n",
     "mixture = NormalMeanMixtures(\"classical\", alpha=0, beta=1, gamma=1, distribution=expon)"
    ]
   },
@@ -56,6 +57,7 @@
    "outputs": [],
    "source": [
     "from src.generators.nm_generator import NMGenerator\n",
+    "\n",
     "generator = NMGenerator()\n",
     "sample = generator.classical_generate(mixture, 250)"
    ]
@@ -91,8 +93,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "sample = pd.Series(sample, name = \"sample\")\n",
-    "sns.histplot(data=sample, kde=True, line_kws = {\"linewidth\" : 3});"
+    "\n",
+    "sample = pd.Series(sample, name=\"sample\")\n",
+    "sns.histplot(data=sample, kde=True, line_kws={\"linewidth\": 3});"
    ]
   },
   {
@@ -124,16 +127,17 @@
    ],
    "source": [
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "grid = np.linspace(-10, 10, 1000)\n",
     "mixture_pdf_value = []\n",
     "mixture_pdf_error = []\n",
-    "for (i, x) in enumerate(grid):\n",
-    "    estimated_density = mixture.compute_pdf(x, {\"error_tolerance\" : 0.01})\n",
+    "for i, x in enumerate(grid):\n",
+    "    estimated_density = mixture.compute_pdf(x, {\"error_tolerance\": 0.01})\n",
     "    mixture_pdf_value.append(estimated_density[0])\n",
     "    mixture_pdf_error.append(estimated_density[1])\n",
     "    if i % 100 == 0:\n",
-    "        print(\"#\", end='')"
+    "        print(\"#\", end=\"\")"
    ]
   },
   {
@@ -175,13 +179,13 @@
    "source": [
     "mixture_pdf_value = np.array(mixture_pdf_value)\n",
     "mixture_pdf_error = np.array(mixture_pdf_error)\n",
-    "fig = plt.figure(figsize=(15,4))\n",
-    "upper_error_plot = sns.lineplot(x=grid, y=mixture_pdf_value + mixture_pdf_error, label='Confidence', color='r')\n",
-    "lower_error_plot = sns.lineplot(x=grid, y=mixture_pdf_value - mixture_pdf_error, label='Confidence', color='r')\n",
-    "estimated_plot   = sns.lineplot(x=grid, y=mixture_pdf_value, label = 'Estimated density')\n",
+    "fig = plt.figure(figsize=(15, 4))\n",
+    "upper_error_plot = sns.lineplot(x=grid, y=mixture_pdf_value + mixture_pdf_error, label=\"Confidence\", color=\"r\")\n",
+    "lower_error_plot = sns.lineplot(x=grid, y=mixture_pdf_value - mixture_pdf_error, label=\"Confidence\", color=\"r\")\n",
+    "estimated_plot = sns.lineplot(x=grid, y=mixture_pdf_value, label=\"Estimated density\")\n",
     "\n",
     "line = estimated_plot.get_lines()\n",
-    "plt.fill_between(line[2].get_xdata(), line[0].get_ydata(), line[1].get_ydata(), color='blue', alpha=.5)\n"
+    "plt.fill_between(line[2].get_xdata(), line[0].get_ydata(), line[1].get_ydata(), color=\"blue\", alpha=0.5)"
    ]
   },
   {
@@ -213,9 +217,9 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(15,4))\n",
-    "kde_plot = sns.kdeplot(data=sample, label = 'KDE')\n",
-    "estimated_plot = sns.lineplot(x=grid, y=mixture_pdf_value, label = 'Estimated density')"
+    "fig = plt.figure(figsize=(15, 4))\n",
+    "kde_plot = sns.kdeplot(data=sample, label=\"KDE\")\n",
+    "estimated_plot = sns.lineplot(x=grid, y=mixture_pdf_value, label=\"Estimated density\")"
    ]
   },
   {
