--- a/src/jupyter_examples/SemiparametricNVM.ipynb
+++ b/src/jupyter_examples/SemiparametricNVM.ipynb
@@ -81,8 +81,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, ax = plt.subplots(layout='constrained')\n",
-    "ax.hist(sample, bins=100, color='blue', alpha=0.5)\n",
+    "fig, ax = plt.subplots(layout=\"constrained\")\n",
+    "ax.hist(sample, bins=100, color=\"blue\", alpha=0.5)\n",
     "plt.show()"
    ]
   },
@@ -110,7 +110,7 @@
    "source": [
     "from src.estimators.semiparametric.nmv_semiparametric_estimator import NMVSemiParametricEstimator\n",
     "\n",
-    "estimator = NMVSemiParametricEstimator(\"mu_estimation\", {\"m\": 10, \"tolerance\": 10 ** -5})"
+    "estimator = NMVSemiParametricEstimator(\"mu_estimation\", {\"m\": 10, \"tolerance\": 10**-5})"
    ]
   },
   {
@@ -182,7 +182,7 @@
     "from src.generators.nmv_generator import NMVGenerator\n",
     "from src.mixtures.nmv_mixture import NormalMeanVarianceMixtures\n",
     "\n",
-    "real_g = expon.pdf # Real g(x)\n",
+    "real_g = expon.pdf  # Real g(x)\n",
     "real_mu = 1\n",
     "size = 100\n",
     "\n",
@@ -206,10 +206,8 @@
    "source": [
     "from src.estimators.semiparametric.nmv_semiparametric_estimator import NMVSemiParametricEstimator\n",
     "\n",
-    "x_data = [0.05, 0.1, 0.2, 0.4, 0.8, 1.6, 3.2, 6.4] # x points to estimate g(x)\n",
-    "estimator = NMVSemiParametricEstimator(\n",
-    "    \"g_estimation_given_mu\", {\"x_data\": x_data, \"u_value\": 7.6, \"v_value\": 0.9}\n",
-    ")\n",
+    "x_data = [0.05, 0.1, 0.2, 0.4, 0.8, 1.6, 3.2, 6.4]  # x points to estimate g(x)\n",
+    "estimator = NMVSemiParametricEstimator(\"g_estimation_given_mu\", {\"x_data\": x_data, \"u_value\": 7.6, \"v_value\": 0.9})\n",
     "est = estimator.estimate(sample)\n",
     "est_data = est.list_value"
    ]
@@ -243,7 +241,7 @@
    ],
    "source": [
     "for i in range(len(x_data)):\n",
-    "    print('x =', x_data[i], 'Real g(x) value: ', real_g(x_data[i]), 'Estimated: ', est_data[i])"
+    "    print(\"x =\", x_data[i], \"Real g(x) value: \", real_g(x_data[i]), \"Estimated: \", est_data[i])"
    ]
   },
   {
@@ -274,12 +272,12 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "x = np.linspace(expon.ppf(0.001), expon.ppf(0.999), 10000)\n",
-    "ax.plot(x, expon.pdf(x), 'r-', lw=3, alpha=0.6)\n",
+    "ax.plot(x, expon.pdf(x), \"r-\", lw=3, alpha=0.6)\n",
     "ax.plot(x_data, est_data)\n",
     "plt.title(\"Estimated mixing density function compared with real\")\n",
-    "plt.xlabel('x')\n",
-    "plt.ylabel('g(x)')\n",
-    "plt.legend(['Real', 'Estimated'])\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(\"g(x)\")\n",
+    "plt.legend([\"Real\", \"Estimated\"])\n",
     "plt.show()"
    ]
   },
@@ -313,11 +311,12 @@
    ],
    "source": [
     "import math\n",
+    "\n",
     "errors = []\n",
     "for i in range(len(x_data)):\n",
-    "    error = math.sqrt(min(x_data[i]**(2*0.25), 1)*(real_g(x_data[i]) - est_data[i])**2)\n",
+    "    error = math.sqrt(min(x_data[i] ** (2 * 0.25), 1) * (real_g(x_data[i]) - est_data[i]) ** 2)\n",
     "    errors.append(error)\n",
-    "    print('x =', x_data[i], 'Error: ', error)"
+    "    print(\"x =\", x_data[i], \"Error: \", error)"
    ]
   },
   {
@@ -339,13 +338,13 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "x = np.linspace(expon.ppf(0.001), expon.ppf(0.999), 10000)\n",
-    "ax.plot(x, expon.pdf(x), 'r-', lw=3, alpha=0.6)\n",
+    "ax.plot(x, expon.pdf(x), \"r-\", lw=3, alpha=0.6)\n",
     "ax.plot(x_data, est_data, lw=2, alpha=0.6)\n",
-    "ax.plot(x_data, errors, 'g-', lw=2, alpha=0.6)\n",
+    "ax.plot(x_data, errors, \"g-\", lw=2, alpha=0.6)\n",
     "plt.title(\"Plot with error\")\n",
-    "plt.xlabel('x')\n",
-    "plt.ylabel('g(x)')\n",
-    "plt.legend(['Real', 'Estimated', 'Error'])\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(\"g(x)\")\n",
+    "plt.legend([\"Real\", \"Estimated\", \"Error\"])\n",
     "plt.show()"
    ]
   }
