refactor/mix-generator
Update nm_generator.py
Update nmv_generator.py
Update nv_generator.py
Changed NM/NMW/NV generators: if the mixture form is canonical, the beta parameter is not considered in the output.

Update abstract_mixture.py
Remembered parameter for mixture form.

Update test_mixing_normal.py
Update nm_sigma_estimation_comparison.ipynb
Now using the updated generator.

--- a/jupiter_examples/nm_sigma_estimation_comparison.ipynb
+++ b/jupiter_examples/nm_sigma_estimation_comparison.ipynb
@@ -250,7 +250,7 @@
     "    \"\"\"\n",
     "    generator = NMGenerator()\n",
     "    mixture = NormalMeanMixtures(\"canonical\", sigma=real_sigma, distribution=distribution)\n",
-    "    return generator.canonical_generate(mixture, sample_len)\n",
+    "    return generator.generate(mixture, sample_len)\n",
     "\n",
     "def estimate_sigma_eigenvalue_based(sample, real_sigma, search_area, a, b):\n",
     "    sample_len = len(sample)\n",
